[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://src/actors/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/gunshot.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/reload.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/dry_fire.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sprites/gun.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.53802
height = 10.1589

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.553256, 0.553318 )
shape = SubResource( 1 )

[node name="Gun" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Gun"]
position = Vector2( 8, 0 )
texture = ExtResource( 6 )

[node name="BulletSpawnPosition" type="Position2D" parent="Gun"]
position = Vector2( 12.2188, -0.40625 )

[node name="SoundGunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="SoundReload" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SoundDryFire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -12.0
